rough first pokedex version
